--- a/yepcette/assets/styles/css/style.css
+++ b/yepcette/assets/styles/css/style.css
@@ -1,17 +1,601 @@
-/* Error: expected "{".
- *    ,
- * 21 |     font-family: 'Work Sans', sans-serif;
- *    |                                         ^
- *    '
- *   assets/styles/sass/style.scss 21:41  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: expected \"{\".\a    \2577 \a 21 \2502      font-family: 'Work Sans', sans-serif;\a    \2502                                          ^\a    \2575 \a   assets/styles/sass/style.scss 21:41  root stylesheet";
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&display=swap");
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+body > header {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: grid;
+  grid-template-columns: 0.1fr 0.1fr 0.1fr 0.8fr 0.4fr 0.2fr 0.1fr;
+  grid-template-rows: 10vh;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+body > header > h1 {
+  align-self: center;
+  justify-self: center;
+  grid-column: 2/3;
+  font-size: 4rem;
+  color: mistyrose;
+  font-weight: 700;
+}
+body > header > nav {
+  grid-column: 4/5;
+  display: flex;
+}
+body > header > nav > ul {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+body > header > nav > ul > li {
+  padding: 5px 0;
+}
+body > header > nav > ul > li > a {
+  font-size: 1.4rem;
+  text-decoration: none;
+}
+@media (prefers-color-scheme: light) {
+  body > header > nav > ul > li > a {
+    color: #ffffff;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  body > header > nav > ul > li > a {
+    color: #ffffff;
+  }
+}
+body > header > nav > ul > li:hover {
+  transform: translateY(-4px);
+}
+@media (prefers-color-scheme: light) {
+  body > header > nav > ul > li:hover {
+    border-bottom: 4px solid #ffffff;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  body > header > nav > ul > li:hover {
+    border-bottom: 4px solid #ffffff;
+  }
+}
+body > header > ul {
+  grid-column: 6/7;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+body > header > ul > li > a {
+  font-size: 1.4rem;
+  text-decoration: none;
+}
+@media (prefers-color-scheme: light) {
+  body > header > ul > li > a {
+    color: #ffffff;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  body > header > ul > li > a {
+    color: #ffffff;
+  }
+}
+body > header > ul > li:hover {
+  transform: translateY(-4px);
+}
+body > header > ul > li:hover > a {
+  color: grey;
+}
+
+#home > section:nth-of-type(1) {
+  height: 70vh;
+  background-image: url("https://cdn.shopify.com/s/files/1/0566/8526/5032/files/4_3d6903d4-c9f9-4a3b-8f6c-00e884e04bbf.png?v=1656921267");
+  background-size: cover;
+  display: grid;
+  grid-template-columns: 1fr 1.2fr;
+  justify-content: center;
+  align-items: center;
+}
+#home > section:nth-of-type(1) > section > h1 {
+  grid-column: 2/3;
+  font-size: 5rem;
+  font-weight: bold;
+  color: mistyrose;
+}
+#home > section:nth-of-type(1) > section > p {
+  grid-column: 2/3;
+  font-size: 2.6rem;
+  font-weight: bold;
+  color: #ffffff;
+  width: 60vh;
+}
+#home > section:nth-of-type(1) > section > p > span {
+  color: mistyrose;
+}
+#home > section:nth-of-type(2) {
+  display: grid;
+  grid-template-rows: 0.1fr 1fr;
+}
+#home > section:nth-of-type(2) > h2 {
+  font-size: 3rem;
+  font-weight: bold;
+  color: #242523;
+  margin: 50px;
+  text-align: center;
+}
+#home > section:nth-of-type(2) > ul {
+  background-color: gainsboro;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 80%;
+  margin: 50px auto;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
+  padding: 40px;
+}
+#home > section:nth-of-type(2) > ul > li > article {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#home > section:nth-of-type(2) > ul > li > article > header > figure {
+  width: 100%;
+}
+#home > section:nth-of-type(2) > ul > li > article > header > figure > img {
+  width: 300px;
+  border-radius: 100%;
+}
+#home > section:nth-of-type(2) > ul > li > article > section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#home > section:nth-of-type(2) > ul > li > article > section > h3 {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 20px 0;
+}
+#home > section:nth-of-type(2) > ul > li > article > section > p {
+  font-size: 1.2rem;
+}
+#home > section:nth-of-type(2) > ul > li > article > footer {
+  display: flex;
+  justify-content: center;
+}
+#home > section:nth-of-type(3) {
+  background-color: gainsboro;
+  display: grid;
+  grid-template-rows: 0.1fr 1fr;
+}
+#home > section:nth-of-type(3) > h2 {
+  font-size: 3rem;
+  font-weight: bold;
+  color: #242523;
+  margin: 50px;
+  text-align: center;
+}
+#home > section:nth-of-type(3) > ul {
+  width: 80%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.article {
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
+  padding: 10px;
+  margin: 50px;
+}
+.article > header > figure {
+  width: 100%;
+}
+.article > header > figure > img {
+  width: 100%;
+}
+.article > section > h3 {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 20px 0;
+}
+.article > section > p {
+  font-size: 1.2rem;
+}
+.article > footer {
+  display: flex;
+  justify-content: center;
+}
+
+.btn-blue {
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 20px;
+  border: none;
+  text-decoration: none;
+  color: white;
+  text-align: center;
+  font-size: 1.2rem;
+  padding: 10px 20px;
+  margin: 20px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+}
+@media (prefers-color-scheme: light) {
+  .btn-blue {
+    background-color: #2d71e3;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  .btn-blue {
+    background-color: #1499e7;
+  }
+}
+.btn-blue:hover {
+  transform: translateY(-2px);
+  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, dd, del, dfn, div, dl, dt, fieldset, font, form, h1, h2, h3, h4, h5, h6, html, iframe, img, ins, kbd, label, legend, li, object, ol, p, pre, q, s, samp, small, span, strike, strong, sub, sup, table, tbody, td, tfoot, th, thead, tr, tt, ul, var {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-weight: inherit;
+  font-style: inherit;
+  font-size: 100%;
+  font-family: inherit;
+  vertical-align: baseline;
+}
+
+.footer1 {
+  display: grid;
+  grid-template-rows: 0.2fr 0.2fr 0.2fr;
+  font-family: "Work Sans", sans-serif;
+}
+
+.f-titre {
+  text-align: center;
+  font-family: "Corinthia", cursive;
+  font-size: 4rem;
+  font-weight: 700;
+  color: #8B0000;
+}
+
+.f-article1 {
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.f-list1 {
+  display: flex;
+  grid-column: 2/3;
+  list-style: none;
+  text-align: center;
+  justify-content: space-between;
+}
+
+.f-li1 {
+  margin: 0;
+  text-decoration: none;
+}
+
+.f-article2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-top: 2vh;
+}
+
+.f-list2 {
+  display: flex;
+  grid-column: 2/3;
+  list-style: none;
+  text-align: center;
+  justify-content: space-between;
+}
+
+.f-li2 {
+  margin: 0px 5px;
+}
+
+body .footer1 .f-article1 .f-list1 .f-li1 a {
+  text-decoration: none;
+  font-family: "Work Sans", sans-serif;
+  color: black;
+}
+
+body .footer1 .f-article2 .f-list2 .f-li2 a {
+  color: #262626;
+  font-size: 17px;
+  border-radius: 50px;
+  background-color: #e6e3e2;
+}
+
+body .footer1 .f-article2 .f-list2 .f-li2 a span {
+  width: 48px;
+}
+
+.f-titre2 {
+  text-align: center;
+  padding-top: 3vh;
+}
+
+#liste-recettes {
+  height: 335vh;
+}
+
+.m-section1 {
+  height: 70vh;
+  background-image: url(https://1964035949.rsc.cdn77.org/uploads/media/5956128d0a17e.png);
+  background-size: cover;
+  box-shadow: 1px;
+}
+
+.m-section2 {
+  height: 8vh;
+  text-align: center;
+  font-size: 3.5rem;
+  font-family: "Work Sans", sans-serif;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.m-section3 {
+  height: 60vh;
+  border-bottom: 1px solid black;
+  display: flex;
+  justify-content: center;
+  background-color: gainsboro;
+}
+
+.m-card {
+  background-color: white;
+  width: 360px;
+  height: 400px;
+  margin: 40px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.card-image {
+  background-color: #1499e7;
+  height: 200px;
+  padding: 0;
+}
+
+.car-1 {
+  background-image: url(https://www.hervecuisine.com/wp-content/uploads/2017/12/recette-raclette-1118x516.jpg.webp);
+  background-size: cover;
+}
+
+.car-2 {
+  background-image: url(https://www.cuisineactuelle.fr/imgre/fit/http.3A.2F.2Fprd2-bone-image.2Es3-website-eu-west-1.2Eamazonaws.2Ecom.2Fcac.2F2018.2F09.2F25.2F03ab5e89-bad7-4a44-b952-b30c68934215.2Ejpeg/555x276/quality/80/crop-from/center/burger-maison.jpeg);
+  background-size: cover;
+}
+
+.car-3 {
+  background-image: url(https://img.cuisineaz.com/660x660/2016/08/31/i93404-gratin-de-lasagnes-a-la-bolognaise.jpg);
+  background-size: cover;
+}
+
+.m-card h3 {
+  font-size: 2rem;
+  font-weight: bold;
+  margin: 20px 0;
+  text-align: center;
+}
+
+.m-card p {
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+.m-card footer {
+  display: flex;
+  justify-content: center;
+  margin-top: 2vh;
+}
+
+.m-section4 {
+  height: 60vh;
+  border-bottom: 1px solid black;
+  display: flex;
+  justify-content: center;
+  background-color: gainsboro;
+}
+
+.car-4 {
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSm87QoJNvuIGiQcRhP9lljDX2P4juF6VOTgA&usqp=CAU);
+  background-size: cover;
+}
+
+.car-5 {
+  background-image: url(https://static.750g.com/images/1200-630/eac4a2099f6297ae9e20ccf7fd92d19e/pate-a-pizza-fine.png);
+  background-size: cover;
+}
+
+.car-6 {
+  background-image: url(https://img.cuisineaz.com/660x660/2016/08/31/i93404-gratin-de-lasagnes-a-la-bolognaise.jpg);
+  background-size: cover;
+}
+
+.m-section5 {
+  height: 60vh;
+  border-bottom: 1px solid black;
+  display: flex;
+  justify-content: center;
+  background-color: gainsboro;
+}
+
+.m-recette-du-jour {
+  height: 105vh;
+  border-bottom: 1px solid black;
+  display: flex;
+  justify-content: center;
+  background-color: gainsboro;
+}
+
+.m-card-recette-du-jour {
+  background-color: white;
+  width: 960px;
+  height: 700px;
+  margin: 40px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  display: grid;
+  grid-template-columns: 0.6fr 1fr 0.6fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+#liste-recettes .m-recette-du-jour .figure2 {
+  display: flex;
+  justify-content: center;
+  grid-column: 3/3;
+  grid-row: 1/2;
+  align-items: center;
+  background-color: gainsboro;
+}
+
+#liste-recettes .m-recette-du-jour .figure1 {
+  display: flex;
+  grid-column: 1/2;
+  grid-row: 1/2;
+  align-items: center;
+  background-color: gainsboro;
+  justify-content: center;
+}
+
+#liste-recettes .m-recette-du-jour .figure3 {
+  display: flex;
+  grid-column: 2/3;
+  grid-row: 2/2;
+  align-items: center;
+  background-color: gainsboro;
+}
+
+#liste-recettes .m-recette-du-jour figure .chef {
+  border-radius: 100%;
+  width: 50%;
+}
+
+#liste-recettes .m-recette-du-jour figure .logo {
+  border-radius: 100%;
+  width: 20%;
+}
+
+#liste-recettes .m-recette-du-jour figure .plat {
+  width: 100%;
+}
+
+#liste-recettes .m-recette-du-jour h3 {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5rem;
+  color: #E02C2C;
+}
+
+#liste-recettes .m-recette-du-jour figure .fourchette {
+  width: 100%;
+}
+
+#liste-recettes .m-recette-du-jour .figure4 {
+  display: flex;
+  grid-column: 1/2;
+  grid-row: 2/2;
+  align-items: center;
+  background-color: gainsboro;
+}
+
+#liste-recettes .m-recette-du-jour .figure5 {
+  display: flex;
+  grid-column: 3/3;
+  grid-row: 2/2;
+  align-items: center;
+  background-color: gainsboro;
+}
+
+#liste-recettes .m-recette-du-jour p {
+  display: flex;
+  grid-column: 2/3;
+  grid-row: 3/3;
+  align-items: center;
+  background-color: gainsboro;
+}
+
+/***** Work pour titre font-family: 'Work Sans', sans-serif; *****/
+/***** open pour texte  font-family: 'Open Sans', sans-serif; *****/
+/***** Corinthia pour logo *****/
+.hidden {
+  display: none;
+}
+
+h2, h3, h4 {
+  font-family: "Work Sans", sans-serif;
+}
+
+p, li {
+  font-family: "Open Sans", sans-serif;
+}
+
+h1 {
+  font-family: "Corinthia", cursive;
+}
+
+/*# sourceMappingURL=style.css.map */
