--- a/yepcette/assets/styles/css/style.css
+++ b/yepcette/assets/styles/css/style.css
@@ -446,10 +446,6 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   padding-top: 3vh;
 }
 
-#liste-recettes {
-  height: 335vh;
-}
-
 .m-section1 {
   height: 70vh;
   background-image: url(https://1964035949.rsc.cdn77.org/uploads/media/5956128d0a17e.png);
@@ -462,15 +458,17 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   text-align: center;
   font-size: 3.5rem;
   font-family: "Work Sans", sans-serif;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  color: darkslategray;
+  background-color: snow;
+  text-transform: uppercase;
+  padding-top: 2vh;
 }
 
 .m-section3 {
   height: 60vh;
-  border-bottom: 1px solid black;
   display: flex;
   justify-content: center;
-  background-color: gainsboro;
+  background-color: snow;
 }
 
 .m-card {
@@ -507,6 +505,7 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   font-weight: bold;
   margin: 20px 0;
   text-align: center;
+  color: darkslategray;
 }
 
 .m-card p {
@@ -522,10 +521,9 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
 
 .m-section4 {
   height: 60vh;
-  border-bottom: 1px solid black;
   display: flex;
   justify-content: center;
-  background-color: gainsboro;
+  background-color: #ffffff;
 }
 
 .car-4 {
@@ -543,24 +541,28 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   background-size: cover;
 }
 
+.car-7 {
+  background-image: url(https://img.cuisineaz.com/660x660/2016/08/31/i93404-gratin-de-lasagnes-a-la-bolognaise.jpg);
+  background-size: cover;
+}
+
 .m-section5 {
   height: 60vh;
-  border-bottom: 1px solid black;
   display: flex;
   justify-content: center;
-  background-color: gainsboro;
+  background-color: #fdfbe3;
 }
 
 .m-recette-du-jour {
   height: 105vh;
-  border-bottom: 1px solid black;
   display: flex;
   justify-content: center;
-  background-color: gainsboro;
+  background-color: #fdfbe3;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .m-card-recette-du-jour {
-  background-color: white;
+  background-color: snow;
   width: 960px;
   height: 700px;
   margin: 40px;
@@ -576,7 +578,7 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   grid-column: 3/3;
   grid-row: 1/2;
   align-items: center;
-  background-color: gainsboro;
+  background-color: snow;
 }
 
 #liste-recettes .m-recette-du-jour .figure1 {
@@ -584,7 +586,7 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   grid-column: 1/2;
   grid-row: 1/2;
   align-items: center;
-  background-color: gainsboro;
+  background-color: snow;
   justify-content: center;
 }
 
@@ -593,7 +595,7 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   grid-column: 2/3;
   grid-row: 2/2;
   align-items: center;
-  background-color: gainsboro;
+  background-color: snow;
 }
 
 #liste-recettes .m-recette-du-jour figure .chef {
@@ -603,7 +605,7 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
 
 #liste-recettes .m-recette-du-jour figure .logo {
   border-radius: 100%;
-  width: 20%;
+  width: 80%;
 }
 
 #liste-recettes .m-recette-du-jour figure .plat {
@@ -618,7 +620,8 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   justify-content: center;
   align-items: center;
   font-size: 2.5rem;
-  color: #E02C2C;
+  color: darkslategray;
+  background-color: snow;
 }
 
 #liste-recettes .m-recette-du-jour figure .fourchette {
@@ -630,7 +633,7 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   grid-column: 1/2;
   grid-row: 2/2;
   align-items: center;
-  background-color: gainsboro;
+  background-color: snow;
 }
 
 #liste-recettes .m-recette-du-jour .figure5 {
@@ -638,7 +641,7 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   grid-column: 3/3;
   grid-row: 2/2;
   align-items: center;
-  background-color: gainsboro;
+  background-color: snow;
 }
 
 #liste-recettes .m-recette-du-jour p {
@@ -646,7 +649,39 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   grid-column: 2/3;
   grid-row: 3/3;
   align-items: center;
-  background-color: gainsboro;
+  background-color: snow;
+  font-size: 1.2rem;
+}
+
+.bouton {
+  text-decoration: none;
+  padding: 10px;
+  font-family: arial;
+  font-size: 1em;
+  color: darkslategray;
+  background-color: #fdfbe3;
+  border-radius: 24px;
+  -webkit-border-radius: 24px;
+  -moz-border-radius: 24px;
+  border: 4px solid #fdfbe3;
+  box-shadow: 3px 3px 12px #444444;
+  -webkit-box-shadow: 3px 3px 12px #444444;
+  -moz-box-shadow: 3px 3px 12px #444444;
+}
+
+.bouton:hover {
+  padding: 10px;
+  box-shadow: 1px 1px 4px #777777;
+  -webkit-box-shadow: 1px 1px 4px #777777;
+  -moz-box-shadow: 1px 1px 4px #777777;
+}
+
+.m-recette-du-jour-ul {
+  display: flex;
+  grid-column: 3/3;
+  grid-row: 3/3;
+  align-items: center;
+  justify-content: center;
 }
 
 #recette .mainrecette {
