--- a/yepcette/assets/styles/sass/_liste-recettes.scss
+++ b/yepcette/assets/styles/sass/_liste-recettes.scss
@@ -1,5 +1,5 @@
 #liste-recettes {
-    height: 335vh;
+    
     
 }
 .m-section1{
@@ -13,14 +13,16 @@
     text-align: center;
     font-size:  3.5rem;
     font-family: 'Work Sans', sans-serif ;
-    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    color: darkslategray;
+    background-color: snow;
+    text-transform: uppercase;
+    padding-top: 2vh;
 }
 .m-section3{
     height: 60vh;
-    border-bottom: 1px solid black;
     display: flex;
     justify-content: center;
-    background-color: gainsboro;
+    background-color: snow;
 }
 .m-card {
     background-color: white;
@@ -53,6 +55,7 @@
     font-weight: bold;
     margin: 20px 0;
     text-align: center;
+    color: darkslategray;
     }
 }
 .m-card {
@@ -72,10 +75,9 @@
 
 .m-section4{
     height: 60vh;
-    border-bottom: 1px solid black;
     display: flex;
     justify-content: center;
-    background-color: gainsboro;
+    background-color: #ffffff;
 }
 .car-4 {
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSm87QoJNvuIGiQcRhP9lljDX2P4juF6VOTgA&usqp=CAU);
@@ -90,23 +92,36 @@
     background-size: cover;
 }
 
+.car-7 {
+   background-image: url(https://img.cuisineaz.com/660x660/2016/08/31/i93404-gratin-de-lasagnes-a-la-bolognaise.jpg);
+    background-size: cover; 
+}
+
+
+
+
+
+
+
+
+
+
 .m-section5 {
     height: 60vh;
-    border-bottom: 1px solid black;
     display: flex;
     justify-content: center;
-    background-color: gainsboro;
+    background-color: #fdfbe3
 }
 
 .m-recette-du-jour{
      height: 105vh;
-    border-bottom: 1px solid black;
     display: flex;
     justify-content: center;
-    background-color: gainsboro;
+    background-color: #fdfbe3;
+    box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
 }
 .m-card-recette-du-jour{
-        background-color: white;
+        background-color: snow;
     width: 960px;
     height: 700px;
     margin: 40px;
@@ -123,19 +138,20 @@
              grid-column: 3 / 3;
              grid-row: 1 / 2;
              align-items: center;
-             background-color: gainsboro;
+             background-color: snow;
         }
     }
 }
 #liste-recettes {
     .m-recette-du-jour {
+        
         .figure1 {
             display: flex;
             
              grid-column: 1 / 2;
              grid-row: 1 / 2;
              align-items: center;
-             background-color: gainsboro;
+             background-color: snow;
              justify-content: center;
         }
     }
@@ -149,7 +165,7 @@
              grid-column: 2 / 3;
              grid-row: 2 / 2;
              align-items: center;
-            background-color: gainsboro;
+            background-color: snow;
         }
     }
 }
@@ -172,7 +188,7 @@
         figure {
             .logo {
                 border-radius: 100%;
-                width: 20%;
+                width: 80%;
             }
         }
     }
@@ -197,7 +213,8 @@
     justify-content: center;
     align-items: center;
     font-size: 2.5rem;
-    color: #E02C2C;
+    color: darkslategray;
+    background-color: snow;
         }
     }
 }
@@ -217,7 +234,7 @@
              grid-column: 1 / 2 ;
              grid-row: 2 / 2;
              align-items: center;
-            background-color: gainsboro;
+            background-color: snow;
         }
     }
 }
@@ -230,7 +247,7 @@
              grid-column: 3 / 3;
              grid-row: 2 / 2;
              align-items: center;
-            background-color: gainsboro;
+            background-color: snow;
         }
     }
 }
@@ -242,7 +259,36 @@
              grid-column: 2 / 3;
              grid-row: 3 / 3;
              align-items: center;
-            background-color: gainsboro;
+            background-color: snow;
+            font-size: 1.2rem;
         }
     }
+}
+.bouton {
+    text-decoration: none;
+padding: 10px;
+font-family: arial;
+font-size: 1em;
+color: darkslategray;
+background-color: #fdfbe3;
+border-radius: 24px;
+-webkit-border-radius: 24px;
+-moz-border-radius: 24px;
+border: 4px solid #fdfbe3;
+box-shadow: 3px 3px 12px #444444;
+-webkit-box-shadow: 3px 3px 12px #444444;
+-moz-box-shadow: 3px 3px 12px #444444;
+}
+.bouton:hover {
+padding: 10px;
+box-shadow: 1px 1px 4px #777777;
+-webkit-box-shadow: 1px 1px 4px #777777;
+-moz-box-shadow: 1px 1px 4px #777777;
+}
+.m-recette-du-jour-ul {
+    display: flex;
+    grid-column: 3 / 3;
+    grid-row: 3 / 3;
+    align-items: center;
+    justify-content: center;
 }
