--- a/yepcette/assets/styles/css/style.css
+++ b/yepcette/assets/styles/css/style.css
@@ -651,12 +651,15 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
 
 #recette .recette {
   z-index: 999;
+  width: 100%;
 }
 #recette .mainrecette {
   background-color: #fdfbe3;
   display: grid;
   grid-template-columns: 1fr 4fr 0.5fr 2fr 1fr;
-  grid-template-rows: 0.01fr 0.1fr 0.3fr 2fr;
+  grid-template-rows: 0.01fr 0.2fr 0.3fr 1.4fr;
+  width: 100%;
+  height: 100%;
 }
 #recette .mainrecette section:nth-of-type(1) {
   grid-row: 1/2;
@@ -665,14 +668,14 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  height: 70vh;
+  height: 60vh;
 }
 #recette .mainrecette section:nth-of-type(2) {
   grid-row: 3/4;
   grid-column: 2/3;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
-  background-color: #ffffff;
+  background-color: #F8F9F9;
   margin-top: 0.5rem;
 }
 #recette .mainrecette section:nth-of-type(2) h2 {
@@ -699,7 +702,7 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   padding-left: 0.3rem;
 }
 #recette .mainrecette section:nth-of-type(2) figure img {
-  width: 50rem;
+  width: 100%;
 }
 #recette .mainrecette section:nth-of-type(3) {
   grid-row: 4/5;
@@ -720,7 +723,7 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   padding: 1rem;
-  background-color: #ffffff;
+  background-color: #F8F9F9;
 }
 #recette .mainrecette section:nth-of-type(3) ol li span {
   grid-column: 1/3;
@@ -775,8 +778,8 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
 }
 #recette .mainrecette .aside aside:nth-of-type(1) ul:first-of-type li {
   max-width: 100%;
-  height: 8rem;
-  margin-top: 1.5rem;
+  height: 7.5rem;
+  margin-top: 1.3rem;
   border-radius: 5px;
   color: #fff;
   display: flex;
@@ -823,16 +826,15 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
 }
 #recette .mainrecette .aside aside:nth-of-type(2) {
   grid-row: 2/3;
-  margin-top: 9rem;
+  margin-top: 6rem;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
   padding: 1rem;
-  background-color: #ffffff;
+  background-color: #F8F9F9;
   height: 25rem;
   font-size: 1.2rem;
   position: sticky;
   top: 7rem;
-  margin-bottom: 6rem;
 }
 #recette .mainrecette .aside aside:nth-of-type(2) h2 {
   font-size: 2rem;
@@ -848,30 +850,6 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
 }
 #recette .mainrecette .demo {
   width: 17rem;
-}
-
-.btn-blue {
-  border-radius: 20px;
-  color: white;
-  text-align: center;
-  font-size: 1.2rem;
-  padding: 10px 20px;
-  margin: 20px;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-}
-@media (prefers-color-scheme: light) {
-  .btn-blue {
-    background-color: #2d71e3;
-  }
-}
-@media (prefers-color-scheme: dark) {
-  .btn-blue {
-    background-color: #1499e7;
-  }
-}
-.btn-blue:hover {
-  transform: translateY(-2px);
-  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 /***** Work pour titre font-family: 'Work Sans', sans-serif; *****/
