--- a/yepcette/assets/styles/sass/_recette.scss
+++ b/yepcette/assets/styles/sass/_recette.scss
@@ -3,14 +3,16 @@
 
 .recette{
     z-index:999;
+    width:100%;
 }
  .mainrecette 
 {   
         background-color:#fdfbe3;
         display:grid;
         grid-template-columns: 1fr 4fr 0.5fr 2fr 1fr;
-        grid-template-rows: 0.01fr 0.1fr 0.3fr 2fr;
-         
+        grid-template-rows: 0.01fr 0.2fr 0.3fr 1.4fr;
+        width:100%; 
+        height:100%;
         section:nth-of-type(1)
     {
             grid-row: 1 / 2 ;
@@ -19,14 +21,14 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            height: 70vh;  
+            height: 60vh;  
     }
        section:nth-of-type(2)
     {        grid-row: 3 / 4 ;
              grid-column: 2 / 3 ;
              box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
              border-radius: 10px;
-             background-color:#ffffff;
+             background-color:#F8F9F9;
              margin-top:0.5rem;
         h2 {
                 font-size: 3rem;
@@ -55,7 +57,7 @@
         {
             img 
             {
-                width:50rem;
+                width:100%;
             }
         }
     }
@@ -81,7 +83,7 @@
                      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
                      border-radius: 10px;
                      padding:1rem;
-                     background-color:#ffffff;
+                     background-color:#F8F9F9;
                      
                      span {
                      grid-column: 1 / 3 ;
@@ -144,8 +146,8 @@
             ul:first-of-type {
                 li {
                     max-width:100%;
-                    height:8rem;
-                    margin-top:1.5rem;
+                    height:7.5rem;
+                    margin-top:1.3rem;
                     border-radius: 5px;
                     color:#fff;
                     display:flex;
@@ -202,16 +204,15 @@
            aside:nth-of-type(2) 
         {
                  grid-row: 2 / 3 ;
-                 margin-top:9rem;
+                 margin-top:6rem;
                  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
                  border-radius: 10px;
                  padding:1rem;
-                 background-color:#ffffff;
+                 background-color:#F8F9F9;
                  height:25rem;
                  font-size:1.2rem;
                  position: sticky;
                  top: 7rem;
-                 margin-bottom: 6rem;
                  
             h2 {
                 font-size: 2rem;
@@ -232,27 +233,4 @@
     }
 }
 
-}
-  
-
-
-.btn-blue{
-    
-    border-radius: 20px;
-    color: white;
-    text-align: center;
-    font-size: 1.2rem;
-    padding: 10px 20px;
-    margin: 20px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-    @media (prefers-color-scheme: light){
-      background-color: $lightThemeBlue;
-    }
-    @media (prefers-color-scheme: dark){
-      background-color: $darkThemeBlue;
-    }
-    &:hover{
-        transform: translateY(-2px);
-        box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.5);
-    }
 }
